# sports-ai-analysis-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  parlay_system_status.md  pyproject.toml  requirements.txt  setup.py  test_current_system.py
config/: data_sources.yaml
config/model_configs/: neural_net.yaml  xgboost.yaml
data/predictions/: predictions_2025_week13.json  (+5 more)
docs/: DOCKER_SETUP.md  MODEL_IMPROVEMENTS.md  MODEL_IMPROVEMENT_SUMMARY.md  NGS_DATA_2025.md  ODDS_COLLECTION_SETUP.md  ODDS_DATA_STRATEGY.md  PAPER_TRADING_GUIDE.md  WEEK_12_RESULTS.md  WEEK_13_2025_PREDICTIONS.md  WEEK_13_ALL_PREDICTIONS.md  WEEK_13_ANALYSIS.md  roadmap.md
scripts/: backtest_2024.py  backtest_betting_strategy.py  collect_daily_odds.py  collect_data.py  collect_historical_data.py  collect_results.py  evaluate_paper_trades.py  explore_nfl_data.py  generate_predictions.py  import_manual_odds.py  orchestrate.py  predict_adaptive.py  predict_all_stats.py  predict_week13_all.py  record_paper_trades.py  research_features.py  scheduler.py  test_parlay_generation.py  train_enhanced_model.py  train_enhanced_models.py  train_models.py  train_models_v2.py  train_multi_stat_models.py  view_paper_trading_report.py
tests/: conftest.py  test_cli.py  test_dashboard.py  test_demo.py  test_dynamic_filters.py  test_edge_calculator.py  test_injury_collection.py  test_monitoring.py  test_nfl_schedule.py  test_notifications.py  test_odds_api.py  test_orchestrator.py  test_parlay_core.py  test_parlay_minimal.py  test_parlay_system.py  test_player_props.py  test_retry.py  test_settings.py  test_smart_system.py
(+85 files in other folders)
