[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sports-betting"
version = "0.1.0"
description = "AI/ML powered sports betting analysis system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Data manipulation and analysis
pandas = "^2.1.0"
numpy = "^1.25.0"
scipy = "^1.11.0"
polars = "^0.19.0"

# Machine Learning
scikit-learn = "^1.3.0"
xgboost = "^1.7.0"
lightgbm = "^4.0.0"
torch = "^2.0.0"
optuna = "^3.3.0"
shap = "^0.42.0"
bayesian-optimization = "^1.4.0"

# Data sources
nfl-data-py = "^0.3.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"

# Database
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"

# CLI and utilities
click = "^8.1.0"
rich = "^13.5.0"
pydantic = "^2.3.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0"

# Visualization and reporting
plotly = "^5.15.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"

# Testing and development
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.poetry.scripts]
analyze = "sports_betting.cli.analyzer:main"
train = "sports_betting.cli.trainer:main"
report = "sports_betting.cli.reporter:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]